// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot renders correctly element1 1`] = `
<div
  class="slider__pins"
>
  <div
    class="slider__pin slider__pin_position_maximum"
    style="left: 100%;"
  >
    100
  </div>
  <div
    class=""
  />
</div>
`;

exports[`snapshot renders correctly element2 1`] = `
<div
  class="slider__pins"
>
  <div
    class="slider__pin-vertical slider__pin-vertical_position_maximum"
    style="top: 99%;"
  >
    99
  </div>
  <div
    class=""
  />
</div>
`;

exports[`snapshot renders correctly element3 1`] = `
<div
  class="slider__pins"
>
  <div
    class="slider__pin-vertical slider__pin-vertical_position_minimum"
    style="top: 1%;"
  >
    1
  </div>
  <div
    class="slider__pin-vertical slider__pin-vertical_position_maximum"
    style="top: 99%;"
  >
    99
  </div>
</div>
`;

exports[`snapshot renders correctly element4 1`] = `
<div
  class="slider__pins"
>
  <div
    class="slider__pin slider__pin_position_minimum"
    style="left: 1%;"
  >
    1
  </div>
  <div
    class="slider__pin slider__pin_position_maximum"
    style="left: 99%;"
  >
    99
  </div>
</div>
`;
